--- a/index.html
+++ b/index.html
@@ -13,4 +13,5 @@
         <p>this is body text, it will hopefully appear as very small</p>
     </body>
     <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/configuring-a-publishing-source-for-your-github-pages-site">random website/clickable link</a>
+    <img src="Screenshot 2025-06-25 003402.png" alt="an image of a game being downloaded on steam">
 </html>
