--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
         <h6>even smaller text</h6>
         <p>this is body text, it will hopefully appear as very small</p>
     </body>
-    <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/configuring-a-publishing-source-for-your-github-pages-site">random website/clickable link</a>
-    <img src="Screenshot 2025-06-25 003402.png" alt="an image of a game being downloaded on steam">
+    <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/configuring-a-publishing-source-for-your-github-pages-site">random website/clickable link</a><br><br>
+    <img src="Screenshot 2025-06-25 003402.png" alt="image of a game being downloaded on steam"><br><br>
+    <ul>
+        <li>first bullet point</li>
+        <li>second bullet point</li>
+        <li>third bullet point</li>
+    </ul>
+    <ol>
+        <li>first numbered point</li>
+        <li>second numbered point</li>
+        <li>third numbered point</li>
+    </ol>
+    <form action="#" method="post">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name"><br><br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email"><br><br>
+        <input type="submit" value="Submit"><br><br>
+    </form>
+    <form action="#" method="post">
+        <label for="message">Message:</label>
+        <input type=""text" id="message" name="message"><br><br>
+        <input type="submit" value="Send Message">
+    </form>
 </html>
