--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h5>even smaller text</h5>
         <h6>even smaller text</h6>
         <p>this is body text, it will hopefully appear as very small</p>
+        <p style="color: blue;">This will hopefully show up as blue.</p>
     </body>
     <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/configuring-a-publishing-source-for-your-github-pages-site">random website/clickable link</a><br><br>
     <img src="Screenshot 2025-06-25 003402.png" alt="image of a game being downloaded on steam"><br><br>
@@ -26,9 +27,9 @@
     </ol>
     <form action="#" method="post">
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name"><br><br>
+        <input type="text" id="name" name="name" placeholder="Enter your name."><br><br>
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email"><br><br>
+        <input type="email" id="email" name="email" placeholder="Enter your email."><br><br>
         <input type="submit" value="Submit"><br><br>
     </form>
     <form action="#" method="post">
