--- a/index.html
+++ b/index.html
@@ -1,40 +1,57 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Fernando 1st Website</title>
-    </head>
-    <body>
-        <h1>Fernando website, this is a heading above body text.</h1>
-        <h2>This is even smaller text</h2>
-        <h3>even smaller text</h3>
-        <h4>even SMALLER text</h4>
-        <h5>even smaller text</h5>
-        <h6>even smaller text</h6>
-        <p>this is body text, it will hopefully appear as very small</p>
-        <p style="color: blue;">This will hopefully show up as blue.</p>
-    </body>
-    <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/configuring-a-publishing-source-for-your-github-pages-site">random website/clickable link</a><br><br>
-    <img src="Screenshot 2025-06-25 003402.png" alt="image of a game being downloaded on steam"><br><br>
-    <ul>
-        <li>first bullet point</li>
-        <li>second bullet point</li>
-        <li>third bullet point</li>
-    </ul>
-    <ol>
-        <li>first numbered point</li>
-        <li>second numbered point</li>
-        <li>third numbered point</li>
-    </ol>
-    <form action="#" method="post">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" placeholder="Enter your name."><br><br>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="Enter your email."><br><br>
+    <title>FDG Portolio</title>
+    <div style="text-align: center; background: rgba(0,0,0,0.4); color: white; padding: 10px; border-radius: 8px;"><h1>Fernando's Project Portfolio</h1></div>
+    <div style="text-align: center; font-weight: bold; color: white;"><h3>Enter your name and email to proceed<h3></div><br><br>
+    <form action="/submit" method="post" style="text-align: center; font-family: 'Segoe UI', sans-serif;">
+        <label for="name" style="text-align: center; font-family: 'Segoe UI', sans-serif;">Name</label>
+        <input type="text" id="name" name="name" placeholder="Enter your name" style="text-align: center; font-family: 'Segoe UI', sans-serif;"><br><br>
+        <label for="email" style="text-align: center; font-family: 'Segoe UI', sans-serif;">Email</label>
+        <input type="email" id="email" name="email" placeholder="Enter your email" style="text-align: center; font-family: 'Segoe UI', sans-serif;"><br><br>
         <input type="submit" value="Submit"><br><br>
     </form>
-    <form action="#" method="post">
-        <label for="message">Message:</label>
-        <input type=""text" id="message" name="message"><br><br>
-        <input type="submit" value="Send Message">
-    </form>
+    <head>
+  <style>
+    body {
+      background: url('https://wallpapercave.com/wp/wp7455333.jpg') no-repeat center center fixed;
+      background-size: cover;
+      font-family: 'Segoe UI', sans-serif;
+      padding: 50px;
+    }
+
+    .glass {
+      background: rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      border-radius: 15px;
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      padding: 30px;
+      max-width: 500px;
+      margin: auto;
+      color: white;
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
+    }
+
+    input[type="text"],
+    input[type="email"],
+    input[type="submit"] {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 8px;
+    }
+
+    input[type="submit"] {
+      background-color: rgba(255, 255, 255, 0.3);
+      color: white;
+      cursor: pointer;
+    }
+
+    label {
+      display: block;
+      margin-top: 10px;
+    }
+  </style>
+</head>
 </html>
